# boost

./: README.md  RULES.md  TODO.md  boost.py  bot.py  bot.sh  rulesets.py  setup.cfg
boost-game/: bot.py
boost-game/graphics/: svg_to_png.py
boost_game/: __init__.py  __main__.py  boost.py  bot.py  rulesets.py
boost_game/graphics/: __init__.py  board_svg.py
graphics/: __init__.py  board_svg.py  svg_to_png.py
