[metadata]
name = boost-game
version = 1.1.0
author = Aaron Friesen
author_email = maugrift@maugrift.com
description =  A Python implementation of the Boost board game, for CLI and Discord
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Maugrift/boost-py
license = GNU Affero General Public License v3 or later (AGPLv3+)
classifiers =
	License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
zip_safe = False
packages = boost-game
install_requires =
	discord ~= 1.7.3
	termcolor ~= 1.1.0
python_requires >= 3.10

#[options.entry_points]
#console_scripts =
#	boost = boost-game.boost:main
